# conclave-rs

./: .gitignore  Cargo.toml  PROGRESS.md  README.md  TODOS.md  test-e2e.sh
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/network/: Cargo.toml
crates/network/src/: lib.rs
crates/network/tests/: integration.rs
crates/node/: Cargo.toml
crates/node/src/: lib.rs
crates/plugin/: Cargo.toml
crates/plugin/src/: lib.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs
planning/: architecture.md  decentralization-ideas.md
planning/rules/: INDEX.md
planning/rules/Pathfinder-2e-core-Rulebook/: PROGRESS.md  PROGRESS.md.backup
planning/rules/Pathfinder-2e-core-Rulebook/01-introduction/: 01-overview.md  04-key-terms.md
planning/rules/Pathfinder-2e-core-Rulebook/02-ancestries-backgrounds/: 01-overview.md  04-gnome.md  06-halfling.md  07-human.md  08-backgrounds.md
planning/rules/Pathfinder-2e-core-Rulebook/03-classes/: 01-overview.md  02-alchemist.md  04-bard.md  06-cleric.md  07-druid.md  08-fighter.md  09-monk.md  10-ranger.md  11-rogue.md  12-sorcerer.md  13-wizard.md
planning/rules/Pathfinder-2e-core-Rulebook/04-skills/: README.md  acrobatics.md  arcana.md  athletics.md  crafting.md  deception.md  diplomacy.md  nature.md  occultism.md  religion.md  stealth.md  survival.md  thievery.md
planning/rules/Pathfinder-2e-core-Rulebook/05-feats/: README.md  acrobatics-feats.md  arcana-feats.md  lore-feats.md  (+9 more)
rules/Pathfinder-2e-core-Rulebook/: README.md
rules/Pathfinder-2e-core-Rulebook/01-introduction/: 05-example-of-play.md
rules/Pathfinder-2e-core-Rulebook/03-classes/: 03-barbarian.md
rules/Pathfinder-2e-core-Rulebook/04-skills/: lore.md  society.md
rules/Pathfinder-2e-core-Rulebook/05-feats/: athletics-feats.md  diplomacy-feats.md  medicine-feats.md  occultism-feats.md  thievery-feats.md
rules/Pathfinder-2e-core-Rulebook/09-playing-the-game/: 02-making-choices.md
rules/Pathfinder-2e-core-Rulebook/11-crafting-treasure/: 06-worn-items.md
rules/coc-d20/: README.md  appendix.md  character-creation.md  combat.md  creatures.md  equipment.md  feats.md  gamemaster.md  introduction.md  magic.md  mythos.md  sanity.md  settings.md  skills.md  stories.md
rules/dnd-5e/: README.md
rules/dnd-5e/character-creation/: ability-scores.md  alignment.md  choosing-class.md  level-advancement.md  multiclassing.md  origins.md  overview.md
rules/dnd-5e/classes/: barbarian.md  bard.md  cleric.md  druid.md  fighter.md  monk.md  overview.md  paladin.md  ranger.md  rogue.md  sorcerer.md  warlock.md  wizard.md
rules/dnd-5e/equipment/: adventuring-gear.md  armor.md  tools.md  weapons.md
rules/dnd-5e/gameplay-toolbox/: backgrounds.md  environmental-effects.md  magic-items.md  travel-pace.md
rules/dnd-5e/monsters/: list.md  running-monsters.md  stat-blocks.md
rules/dnd-5e/playing-the-game/: abilities.md  ability-checks.md  actions.md  attack-rolls.md  combat.md  d20-tests.md  exploration.md  movement.md  proficiency.md  saving-throws.md  social-interaction.md
rules/dnd-5e/spells/: lists.md  rules.md
rules/lancer/: README.md
rules/lancer/building-pilots-and-mechs/: 0-license-levels.md  1-the-pilot-backgrounds.md  2-triggers.md  3-the-mech-structure.md
rules/lancer/compendium/: 0-overview.md  1-talents-combat.md  10-ips-n.md  11-ssc.md  12-horus.md  13-harrison-armory.md  14-index.md  2-talents-technical.md  3-talents-tactical.md  4-gear-tags.md  5-pilot-gear.md  6-limited-pilot-gear.md  7-ai-nhp.md  8-gms.md  9-gms-everest.md
rules/lancer/getting-started/: 0-introduction.md  1-playing-lancer.md  2-missions-downtime-scenes.md
rules/lancer/mech-combat/: 0-combat-basics.md  1-turn-based-combat.md  10-statuses-conditions.md  11-wear-and-tear.md  12-repairs-death.md  2-movement.md  3-attacks.md  4-cover.md  5-harm-damage.md  6-actions-quick.md  7-actions-full.md  8-reactions-free.md  9-pilots-in-combat.md
rules/lancer/missions-uptime-downtime/: 0-structure-of-play.md  1-the-mission.md  2-narrative-play.md  3-downtime.md  4-downtime-actions.md
rules/pathfinder-2e/01-introduction/: 06-character-creation.md
rules/pathfinder-2e/02-ancestries-backgrounds/: 02-dwarf.md  03-elf.md  05-goblin.md
rules/pathfinder-2e/03-classes/: 05-champion.md
rules/pathfinder-2e/04-skills/: intimidation.md  medicine.md  performance.md
rules/pathfinder-2e/05-feats/: general-feats.md  society-feats.md
rules/pathfinder-2e/08-age-of-lost-omens/: README.md
rules/pathfinder-2e/09-playing-the-game/: 04-encounter-mode.md  06-downtime-mode.md
rules/pathfinder-2e/10-game-mastering/: 01-intro.md  03-dc-rewards.md
(+564 files in other folders)
