[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/protocol",
    "crates/storage",
    "crates/network",
    "crates/plugin",
    "crates/app",
    "crates/node",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Conclave Developers"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
thiserror = "2.0"
uuid = { version = "1.0", features = ["v4", "serde"] }

# Protocol
bincode = "1.3"

# Storage
rusqlite = { version = "0.31", features = ["bundled"] }
migrations_internals = "2.2"

# Network
quinn = "0.11"
if-watch = "3.2"
tokio-util = { version = "0.7", features = ["codec"] }

# Plugin
libloading = "0.8"
toml = "0.8"

# Crypto
ed25519-dalek = "2.1"
bip39 = "2.1"
sha2 = "0.10"

[profile.release]
opt-level = 3
lto = true
