[package]
name = "conclave-app"
version.workspace = true
edition.workspace = true

[[bin]]
name = "conclave"
path = "src/main.rs"

[dependencies]
conclave-core = { path = "../core" }
conclave-protocol = { path = "../protocol" }
conclave-storage = { path = "../storage" }
conclave-network = { path = "../network" }
conclave-plugin = { path = "../plugin" }

tokio = { workspace = true, features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
rusqlite = { workspace = true }
libp2p = { version = "0.53" }
ed25519-dalek = { workspace = true }
