[package]
name = "conclave-core"
version.workspace = true
edition.workspace = true

[dependencies]
conclave-protocol = { path = "../protocol" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
ed25519-dalek = { workspace = true }
bip39 = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
hex = "0.4"
rand = "0.8"
