[package]
name = "conclave-network"
version.workspace = true
edition.workspace = true

[dependencies]
conclave-protocol = { path = "../protocol" }
conclave-core = { path = "../core" }
conclave-storage = { path = "../storage" }
tokio = { workspace = true, features = ["full"] }
thiserror = { workspace = true }
libp2p = { version = "0.53", features = [
    "tcp",
    "quic",
    "dns",
    "identify",
    "ping",
    "relay",
    "request-response",
    "mdns",
    "noise",
    "yamux",
    "tokio",
    "macros",
    "json",
] }
libp2p-identity = "0.2"
tokio-stream = "0.1"
futures = "0.3"
bytes = "1.5"
tracing = "0.1"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
uuid = { workspace = true }
rusqlite = { workspace = true }

[dev-dependencies]
tempfile = "3.0"
conclave-storage = { path = "../storage" }
ed25519-dalek = { workspace = true }
rusqlite = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
