[package]
name = "conclave-plugin"
version.workspace = true
edition.workspace = true

[dependencies]
conclave-protocol = { path = "../protocol" }
libloading = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
libc = "0.2"
