[package]
name = "conclave-protocol"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
ed25519-dalek = { workspace = true }

[dev-dependencies]
rand = "0.8"
