[package]
name = "conclave-storage"
version.workspace = true
edition.workspace = true

[dependencies]
conclave-protocol = { path = "../protocol" }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
